6818666: G1: Type lost in g1 pre-barrier

Reviewed-by: kvn